--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -92,8 +92,8 @@ jobs:
 
       - name: Commit
         env:
-        GIT_NAME: ${{ secrets.USER_NAME }}
-        GIT_EMAIL: ${{ secrets.USER_EMAIL }}
+        USER_NAME: ${{ secrets.USER_NAME }}
+        USER_EMAIL: ${{ secrets.USER_EMAIL }}
         run: |
           git config --local user.name $USER_NAME
           git config --local user.email $USER_EMAIL
