--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -104,4 +104,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.USER_TOKEN }}
-          branch: master
+          branch: main
