--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -62,7 +62,7 @@ on:
     - cron: "50 6 * * *" # 14:50
     - cron: "55 6 * * *" # 14:55
 
-    # 15:00 - (每五分钟一次)
+    # 15:00 (每五分钟一次)
     - cron: "0 7 * * *" # 15:00
 
 env:
